--- a/src/Raven.Studio/wwwroot/Content/css/pages/pull-replication.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/pull-replication.less
@@ -1,5 +1,22 @@
 ﻿.edit-pull-replication-hub-task {
     
+    // what about this in sink ?
+    //
+    
+    // todo place in general place ?
+    .disabled-area {
+        pointer-events: none;
+        opacity: 0.5;
+    }
+    
+    #replicationAccessList {
+        max-height: 800px;
+    }
+    
+    .replication-access-buttons {
+        top: -25px;
+    }
+    
     .certificates-actions {
         align-items: flex-start;
         
