--- a/src/Raven.Studio/wwwroot/Content/css/styles-common.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles-common.less
@@ -843,9 +843,13 @@ input[type=file] + .form-control {
 
 .margin-top {
     margin-top: @grid-gutter-width / 2;
-
+    
     &.margin-top-sm, &.margin-sm {
         margin-top: @grid-gutter-width / 4;
+    }
+
+    &.margin-top-xs, &.margin-xs {
+        margin-top: @grid-gutter-width / 6;
     }
 
     &.margin-top-lg, &.margin-lg {
