--- a/src/Raven.Studio/wwwroot/App/views/database/settings/connectionStringRaven.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/settings/connectionStringRaven.html
@@ -11,13 +11,35 @@
         <input class="form-control" data-bind="textInput: database" placeholder="Enter database for the connection string" title="Destination database">
     </div>
 </div>
+
+<!--<div class="form-group" data-bind="validationElement: inputUrl().discoveryUrlName">-->
+<!--    <label class="control-label">Discovery URLs:</label>-->
+<!--    <div class="flex-grow" data-bind="validationElement: topologyDiscoveryUrls">-->
+<!--        <div class="flex-horizontal">-->
+<!--            <div class="flex-grow">-->
+<!--                <input class="form-control" placeholder="Enter discovery url to add" data-bind="textInput: inputUrl().discoveryUrlName" />-->
+<!--            </div>-->
+<!--            <button class="btn btn-info"-->
+<!--                    data-bind="click: addDiscoveryUrlWithBlink, enable: inputUrl().discoveryUrlName() && inputUrl().validationGroup.isValid()">-->
+<!--                <i class="icon-plus"></i><span>Add URL</span>-->
+<!--            </button>-->
+<!--        </div>-->
+<!--        <div class="help-block" data-bind="validationMessage: topologyDiscoveryUrls"></div>-->
+<!--    </div>-->
+<!--</div>-->
+
 <div class="form-group" data-bind="validationElement: inputUrl().discoveryUrlName"> 
     <label class="control-label">Discovery URLs:</label>    
     <div class="flex-grow"> 
         <input class="form-control" placeholder="Enter discovery url to add" data-bind="textInput: inputUrl().discoveryUrlName" />                              
     </div>        
-    <button class="btn btn-info" data-bind="click: addDiscoveryUrlWithBlink, enable: inputUrl().discoveryUrlName() && inputUrl().validationGroup.isValid()"><i class="icon-plus"></i><span>Add URL</span></button> 
+    <button class="btn btn-info" 
+            data-bind="click: addDiscoveryUrlWithBlink, enable: inputUrl().discoveryUrlName() && inputUrl().validationGroup.isValid()">
+        <i class="icon-plus"></i><span>Add URL</span>
+    </button> 
 </div>
+
+
 <div class="form-group" data-bind="visible: topologyDiscoveryUrls().length">
     <label class="control-label">&nbsp;</label>
     <div class="flex-grow">
@@ -38,7 +60,13 @@
         </ul>
     </div>
 </div>
-<div class="form-group" data-bind="if: topologyDiscoveryUrls.error()">
+
+
+<!--<div class="form-group" data-bind="validationElement: topologyDiscoveryUrls">-->
+<!--    <label class="control-label">&nbsp;</label>-->
+<!--    <span class="help-block" data-bind="validationMessage: topologyDiscoveryUrls"></span>-->
+<!--</div>-->
+<div class="form-group" data-bind="if: !topologyDiscoveryUrls.isValid()">
     <label class="control-label">&nbsp;</label>
     <span data-bind="validationElement: topologyDiscoveryUrls">
         <span class="help-block" data-bind="validationMessage: topologyDiscoveryUrls"></span>
