--- a/src/Raven.Studio/wwwroot/Content/css/basic-layout.less
+++ b/src/Raven.Studio/wwwroot/Content/css/basic-layout.less
@@ -295,7 +295,8 @@ body {
 }
 
 .absolute-fill {
-    position: absolute;
+    //position: absolute;
+    position: absolute !important;
     top: 0;
     left: 0;
     right: 0;
