--- a/src/Raven.Studio/wwwroot/Content/css/styles-common.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles-common.less
@@ -808,6 +808,10 @@ input[type=file] + .form-control {
         margin-left: @grid-gutter-width / 4;
     }
 
+    //&.margin-left-xs, &.margin-xs {
+    //    margin-top: @grid-gutter-width / 6;
+    //}
+
     &.margin-left-lg, &.margin-lg {
         margin-left: @grid-gutter-width;
     }
@@ -819,6 +823,10 @@ input[type=file] + .form-control {
     &.margin-right-sm, &.margin-sm {
         margin-right: @grid-gutter-width / 4;
     }
+
+    //&.margin-right-xs, &.margin-xs {
+    //    margin-top: @grid-gutter-width / 6;
+    //}
 
     &.margin-right-lg, &.margin-lg {
         margin-right: @grid-gutter-width;
