--- a/src/Raven.Studio/wwwroot/Content/css/pages/etl.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/etl.less
@@ -22,6 +22,10 @@
 @backup-color-dark: darken(@color-5, 10%);
 @backup-color-light: lighten(@color-5, 5%);
 
+//@backup-server-wide-color:  @color-5-2;
+//@backup-server-wide-color-dark: darken(@color-5-2, 10%);
+//@backup-server-wide-light: lighten(@color-5-2, 5%);
+
 @subscription-color: @color-3;
 @subscription-color-dark: darken(@color-3, 10%);
 @subscription-color-light: lighten(@color-3, 10%);
@@ -211,6 +215,11 @@
 
         .task-periodic-backup {
             background-color: @backup-color;
+        }
+
+        // new...
+        .task-server-wide-backup {
+            background-color: @grey;
         }
     }
 
