RavenDB-15571 Edit index fields - inherit Analyzer info - with Marcin request

--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/editIndex.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/editIndex.html
@@ -540,10 +540,14 @@
                         <div class="properties-item">
                             <span class="properties-label">Indexing</span>
                             <div class="btn-group properties-value">
-                                <button type="button" class="btn set-size dropdown-toggle" data-toggle="dropdown" aria-expanded="false" 
-                                        data-bind="attr: { title: effectiveIndexing() === 'Search (implied)' ? 'Indexing is not defined. Search is used since an analyzer is defined' : effectiveIndexing() }">
-                                    <span data-bind="text: effectiveIndexing"></span> <span class="caret"></span>
+                                <button type="button" class="btn set-size dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+                                        data-bind="attr: { title: !effectiveIndexing() ? 'Indexing is not defined. Search is used since an analyzer is defined' : effectiveIndexing() }">
+                                    <span data-bind="text: effectiveIndexing() || 'test'"></span> <span class="caret"></span>
                                 </button>
+<!--                                <button type="button" class="btn set-size dropdown-toggle" data-toggle="dropdown" aria-expanded="false" -->
+<!--                                        data-bind="attr: { title: effectiveIndexing() === 'Search (implied)' ? 'Indexing is not defined. Search is used since an analyzer is defined' : effectiveIndexing() }">-->
+<!--                                    <span data-bind="text: effectiveIndexing"></span> <span class="caret"></span>-->
+<!--                                </button>-->
                                 <ul class="dropdown-menu" data-bind=" css: { 'list-dropup' : $root.shouldDropupMenu($data, isDefaultFieldOptions() ? 0 : $index())() }">
                                     <li data-bind="if:!analyzerDefinedWithoutIndexing()">
                                         <a href="#" data-bind="click: indexing.bind(indexing, null)"><span data-bind="text: defaultIndexing"></span></a>
