--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/editReplicationHubTask.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/editReplicationHubTask.html
@@ -242,7 +242,9 @@
                             </div>
                         </div>
                         <div class="form-group" data-bind="validationElement: certificate">
-                            <label class="control-label">Certificate</label>
+                            <label class="control-label">Certificate
+<!--                                <small id="hub-certificate-info" class="margin-left margin-left-sm" data-toggle="tooltip" data-placement="right"><i class="icon-info text-info"></i></small>-->
+                            </label>
                             <div class="flex-grow">
                                 <div data-bind="if: certificate">
                                     <div class="panel certificate-item margin-top margin-top-xs">
@@ -272,13 +274,13 @@
                                     </div>
                                 </div>
                                 <div class="input-group file-input">
-                                    <input type="file" id="certificateFilePicker" data-bind="event: { change: _.partial($root.importCertificate, $element) }" tabindex="-1" />
+                                    <input type="file" id="certificateFilePicker" data-bind="event: { change: _.partial($root.uploadCertificate, $element) }" tabindex="-1" />
                                 </div>
-                                <div class="flex-horizontal certificates-actions margin-bottom" title="Import your own certificate" data-bind="if: isNewAccessItem() && !certificate() ">
-                                    <label for="certificateFilePicker" class="btn btn-default">
-                                        <i class="icon-import"></i><span>Import existing certificate</span>
+                                <div class="flex-horizontal certificates-actions margin-bottom" data-bind="if: isNewAccessItem() && !certificate()">
+                                    <label for="certificateFilePicker" class="btn btn-default" id="upload-certificate" data-toggle="tooltip" data-placement="bottom">
+                                        <i class="icon-import"></i><span>Upload existing certificate</span>
                                     </label>
-                                    <button type="button" class="btn btn-default" title="RavenDB will generate a certificate for you"
+                                    <button type="button" class="btn btn-default" id="generate-certificate" data-toggle="tooltip" data-placement="bottom"
                                             data-bind="click: $root.generateCertificate, disable: $root.spinners.generateCertificate,
                                                        css: { 'btn-spinner' : $root.spinners.generateCertificate }">
                                         <i class="icon-magic-wand"></i><span>Generate new certificate</span>
@@ -379,12 +381,17 @@
                                                                  usingExistingCertificate() ? 'Download is available only for a RavenDb generated certificate.' :
                                                                 'Please add a certificate before downloading.' : '',
                                                                 'title': !$root.spinners.generateCertificate() && !disableDownload() ?
-                                                                'Download the generated certificate to a .pfx file' : '' }">
-                                            <button class="btn btn-default" title="Download the generated certificate"
+                                                                'Download the generated certificate to a .pfx file (public & private keys)' : '' }">
+                                            <button class="btn btn-default"
                                                     data-bind="click: $root.downloadCertificate, 
                                                                disable: $root.spinners.generateCertificate() || disableDownload()">
                                                 <i class="icon-export"></i><span>Download generated certificate</span>
                                             </button>
+<!--                                            <button class="btn btn-default" title="Download the generated certificate"-->
+<!--                                                    data-bind="click: $root.downloadCertificate, -->
+<!--                                                               disable: $root.spinners.generateCertificate() || disableDownload()">-->
+<!--                                                <i class="icon-export"></i><span>Download generated certificate</span>-->
+<!--                                            </button>-->
                                         </div>
                                     </div>
                                     <span class="help-block" data-bind="validationMessage: certificateInfoWasSavedForSinkTask"></span>
