--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/editIndex.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/editIndex.html
@@ -163,6 +163,12 @@
                         <span class="label label-primary margin-left margin-left-sm" data-bind="text: editedIndex().additionalSources().length || undefined"></span>
                     </a>
                 </li>
+                <li role="presentation" id="additionalAssembliesTab">
+                    <a href="#additionalAssemblies" aria-controls="additionalAssemblies" role="tab" data-toggle="tab">
+                        <i class="icon-plus"></i>
+                        <span>Additional Assemblies</span>
+                    </a>
+                </li>
             </ul>
             <div class="tab-content">
                 <div role="tabpanel" class="tab-pane fade in active" id="fields">
@@ -240,6 +246,79 @@
                         </div>
                     </div>
                 </div>
+                
+                <div role="tabpanel" class="tab-pane fade" id="additionalAssemblies">
+                   <div>
+                       <pre>
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                           
+                       </pre>
+                       TBD...
+                   </div>
+                </div>
+                
             </div>
         </div>
     </div>
