--- a/src/Raven.Studio/wwwroot/App/views/database/settings/revisions.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/settings/revisions.html
@@ -1,4 +1,4 @@
-<form role="form" class="revisions flex-vertical absolute-fill content-margin" data-bind="submit: saveChanges" novalidate>
+<form role="form" class="revisions flex-vertical absolute-fill content-margin" data-bind="submit: saveChanges" novalidate autocomplete="off">
     <div class="row flex-row flex-grow flex-stretch-items">
         <div class="col-sm-12 col-lg-8">
             <div class="flex-header flex-horizontal">
@@ -47,11 +47,7 @@
                     </button>
                 </div>
             </div>
-            <div class="scroll flex-grow">                
-                <div data-bind="with: defaultConfiguration">
-                    <div class="panel panel-info panel-state revisions-item" data-bind="css: { active: $data === $root.currentBackingItem() }, template: { name: 'revisions-config-item-template' }">
-                    </div>
-                </div>
+            <div class="scroll flex-grow margin-top margin-top-lg">
                 <div class="hr-title">
                     <h5 class="no-text-transform">
                         <i class="icon-conflicts"></i>
@@ -62,11 +58,19 @@
                     <div class="panel panel-state revisions-item" data-bind="css: { active: $data === $root.currentBackingItem() }, template: { name: 'revisions-config-item-template' }">
                     </div>
                 </div>
-                <div class="hr-title">
+                <div class="hr-title margin-top">
                     <h5 class="no-text-transform">
                         <i class="icon-folder"></i>
-                        <span>Collections Definitions</span>
+                        <span>Collections</span>
                     </h5><hr>
+                </div>
+                <div data-bind="visible: !defaultConfiguration() && perCollectionConfigurations().length === 0" class="text-center margin-top margin-top-lg">
+                    <i class="icon-lg icon-empty-set text-muted"></i>
+                    <h3 class="text-center text-muted">No revision configuration has been created per collection.</h3>
+                </div>
+                <div data-bind="with: defaultConfiguration">
+                    <div class="panel panel-info panel-state revisions-item" data-bind="css: { active: $data === $root.currentBackingItem() }, template: { name: 'revisions-config-item-template' }">
+                    </div>
                 </div>
                 <div data-bind="foreach: perCollectionConfigurations">
                     <div class="panel panel-state revisions-item" data-bind="css: { active: $data === $root.currentBackingItem() }, template: { name: 'revisions-config-item-template' }">
@@ -76,13 +80,13 @@
         </div>
         <div class="col-sm-12 col-lg-4">
             <div class="flex-header">
-                <span class="has-disable-reason" data-bind="attr: { 'data-original-title': defaultConfiguration() ? 'Default configuration was already created' : '' }">
-                            <button class="btn btn-info" data-bind="click: createDefaultConfiguration, disable: defaultConfiguration()">
-                                <i class="icon-settings"></i>
-                                <span>Create a default configuration</span>
-                            </button>
-                        </span>
-                <button class="btn btn-default" data-bind="click: addCollectionSpecificConfiguration">
+                <span class="has-disable-reason" data-bind="attr: { 'data-original-title': defaultConfiguration() ? 'Default collection configuration was already created' : '' }">
+                    <button class="btn btn-info" data-bind="click: createDefaultConfiguration, disable: defaultConfiguration()" title="Create default revision configuration for all collections">
+                        <i class="icon-settings"></i>
+                        <span>Create a default configuration</span>
+                    </button>
+                </span>
+                <button class="btn btn-default" data-bind="click: addCollectionSpecificConfiguration" title="Create a revision configuration for a specific collection">
                     <i class="icon-plus"></i>
                     <span>Add a collection specific configuration</span>
                 </button>
@@ -95,9 +99,8 @@
             <div data-bind="with: currentlyEditedItem">
                 <div class="panel padding edit-panel">
                     <div class="flex-horizontal">
-                        <h3 data-bind="text: isDefault() ? 'Default collection' : (isConflicts() ? 'Conflicts' : 'Collection')" class="margin-right"></h3>
-
-                        <div class="dropdown btn-group flex-grow" data-bind="validationElement: collection, visible: canChangeName">
+                        <h3 data-bind="text: isDefault() ? 'Default Collection Configuration' : (isConflicts() ? 'Conflict Revision Configuration' : 'Collection')" class="margin-right"></h3>
+                            <div class="dropdown btn-group flex-grow" data-bind="validationElement: collection, visible: canChangeName">
                             <input class="form-control dropdown-toggle" placeholder="Select collection" data-toggle="dropdown" data-bind="textInput: collection, attr: { id: 'collectionNameInput' }" />
                             <span class="caret dropdown-toggle" data-toggle="dropdown"></span>
                             <ul class="dropdown-menu" role="menu" style="display: none;" data-bind="autoComplete: '#' + 'collectionNameInput', foreach: $root.createCollectionNameAutocompleter($data)">
@@ -160,7 +163,6 @@
             <h3 data-bind="attr: { title: name }" class="flex-grow">
                 <span data-bind="text: name"></span>
             </h3>
-            <i class="icon-info text-info conflicts-collection-info" data-placement="bottom" data-bind="visible: isConflicts"></i>
         </div>
         <div class="flex-grow">
             <ul class="properties">
@@ -171,6 +173,7 @@
         </div>
         <div class="actions-container">
             <div class="actions">
+                <i class="icon-info text-info conflicts-collection-info margin-right margin-right-sm" data-placement="left" data-bind="visible: isConflicts"></i>
                 <button class="btn btn-default" data-bind="visible: !disabled(), click: $root.disableConfiguration">
                     <i class="icon-stop"></i><span>Disable</span>
                 </button>
