--- a/src/Raven.Studio/wwwroot/App/views/database/query/query.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/query/query.html
@@ -56,6 +56,10 @@
             </div>
         </div>
     </div>
+
+    <div id="mapid"></div>
+    
+    
     <div class="flex-window-scroll flex-window stretch query-results-container">
         <div class="flex-window-head">
             <h2 class="on-base-background">
