--- a/src/Raven.Studio/wwwroot/Content/css/pages/query.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/query.less
@@ -52,6 +52,36 @@
 }
 
 #queryContainer {
+
+    #mapid { 
+        height: 100%;
+        width: 100%;
+    }
+
+    .custom-popup .leaflet-popup-content-wrapper {
+        background:#2c3e50;
+        color:#fff;
+        font-size:14px;
+        line-height:22px;
+        overflow-wrap: break-word;
+        width: 400px;
+    }
+    .custom-popup .leaflet-popup-content-wrapper a {
+        color:rgba(255,255,255,0.5);
+    }
+    .custom-popup .leaflet-popup-tip-container {
+        width:30px;
+        height:15px;
+    }
+    //.custom-popup .leaflet-popup-tip {
+    //    border-left:15px solid transparent;
+    //    border-right:15px solid transparent;
+    //    border-top:15px solid #2c3e50;
+    //}
+    
+    .leaf
+    
+    
     .virtual-grid {
         .cell {
             &.action-cell {
