--- a/src/Raven.Studio/wwwroot/Content/css/icons.less
+++ b/src/Raven.Studio/wwwroot/Content/css/icons.less
@@ -114,6 +114,9 @@
     }
 }
 
+.make-icon(load-map-reduce, "\ea3e");
+.make-icon(load-index, "\ea3d");
+.make-icon(index-history, "\ea3c");
 .make-icon(additional-assemblies, "\ea3a");
 .make-icon(additional-sources, "\ea3b");
 .make-icon(database-record, "\ea39");
