--- a/src/Raven.Studio/wwwroot/Content/css/pages/admin-logs.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/admin-logs.less
@@ -4,12 +4,16 @@
             background-color: @panel-bg;
         }
         
+        &.bg-info {
+            background-color: lighten(@brand-info, 10%);
+        }
+
         border: none;
         white-space: pre-wrap;
         font-size: 13px;
         line-height: 17px;
         width: 100%;
-        
+
         .copy-item-button {
             color: darken(@color-4-1, 20%);
             visibility: hidden;
@@ -26,20 +30,24 @@
     pre {
         padding: 0px 2px 0px 2px;
     }
-    
+
     span {
         padding: 5px 5px 5px 1px;
     }
-    
+
     .even {
         .item {
             &:not(.bg-danger) {
-                background-color: lighten(@panel-bg,5%);
+                background-color: lighten(@panel-bg, 5%);
             }
-            
+
             span {
                 &.bg-danger {
                     background-color: lighten(@state-danger-bg, 6%);
+                }
+                
+                &.bg-info {
+                    background-color: lighten(@brand-info, 20%);
                 }
             }
         }
@@ -49,14 +57,14 @@
 .admin-logs {
     .columns-list-container {
         width: 600px;
-        
+
         &#settingsContainer {
             height: auto;
         }
     }
 
     .full-width {
-       width: 100%;
+        width: 100%;
     }
 
     #adminLogsPath {
@@ -67,3 +75,75 @@
         margin-top: 5px;
     }
 }
+
+
+
+//.log-list {
+//    .item {
+//        &:not(.bg-danger) {
+//            background-color: @panel-bg;
+//        }
+//        
+//        border: none;
+//        white-space: pre-wrap;
+//        font-size: 13px;
+//        line-height: 17px;
+//        width: 100%;
+//        
+//        .copy-item-button {
+//            color: darken(@color-4-1, 20%);
+//            visibility: hidden;
+//            padding: 5px 0px 0px 5px;
+//        }
+//
+//        &:hover {
+//            .copy-item-button {
+//                visibility: visible;
+//            }
+//        }
+//    }
+//
+//    pre {
+//        padding: 0px 2px 0px 2px;
+//    }
+//    
+//    span {
+//        padding: 5px 5px 5px 1px;
+//    }
+//    
+//    .even {
+//        .item {
+//            &:not(.bg-danger) {
+//                background-color: lighten(@panel-bg,5%);
+//            }
+//            
+//            span {
+//                &.bg-danger {
+//                    background-color: lighten(@state-danger-bg, 6%);
+//                }
+//            }
+//        }
+//    }
+//}
+//
+//.admin-logs {
+//    .columns-list-container {
+//        width: 600px;
+//        
+//        &#settingsContainer {
+//            height: auto;
+//        }
+//    }
+//
+//    .full-width {
+//       width: 100%;
+//    }
+//
+//    #adminLogsPath {
+//        word-break: break-word;
+//    }
+//
+//    #selectedLogMode {
+//        margin-top: 5px;
+//    }
+//}
