--- a/src/Raven.Studio/wwwroot/App/views/manage/adminLogs.html
+++ b/src/Raven.Studio/wwwroot/App/views/manage/adminLogs.html
@@ -138,10 +138,17 @@
                     <span>No log messages are being written to disk</span>
                 </small>
             </small>
-        </div>
+        </div>      
     </div>
     <div class="flex-horizontal flex-noshrink">
         <div class="flex-separator"></div>
+        <div class="margin-left margin-left-lg bg-warning text-warning padding padding-xs" data-bind="visible: !isConnectedToWebSocket()">
+            <small>
+                <i class="icon-warning"></i>
+                <span data-bind="visible: !isPauseLogs()">Not connected to web socket, trying to Connect</span>
+                <span data-bind="visible: isPauseLogs" class="margin-left margin-left-sm">Admin log is paused</span>
+            </small>
+        </div>
         <div class="btn-group">
             <button class="btn btn-sm btn-info btn-checkable" data-bind="click: toggleTail, css: { active: tailEnabled }">
                 <i class="icon-logs"></i> <span>Monitoring (tail -f)</span>
