--- a/src/Raven.Studio/wwwroot/App/views/database/cmpXchg/cmpXchg.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/cmpXchg/cmpXchg.html
@@ -9,7 +9,6 @@
                             <span>New item</span>
                         </button>
                     </div>
-    
                     <div class="btn-group-label" data-bind="css: { active: selectedItemsCount }" data-label="Selection"
                          role="group">
                         <button type="button" class="btn btn-danger"
@@ -18,12 +17,10 @@
                         </button>
                     </div>
                 </div>
-               
                 <div>
-                    <input class="form-control" placeholder="Filter keys that start with..." data-bind="textInput: filter">
+                    <input class="form-control" placeholder="Filter keys that start with..." data-bind="textInput: filter" />
                 </div>
             </div>
-
         </div>
         <div class="flex-window-scroll">
             <div class="scroll-stretch">
