--- a/src/Raven.Studio/wwwroot/App/views/database/cmpXchg/editCmpXchg.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/cmpXchg/editCmpXchg.html
@@ -1,67 +1,234 @@
-<form data-bind="submit: saveDocument" class="cmp-xchg" autocomplete="off">
-
-    <div class="value-editor flex-window flex-grow content-margin">
-        <div class="flex-window-head">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="documentId">
-                        <div data-bind="if: isCreatingNewValue()">
-                        <div class="input-group" data-bind="validationElement: key">
-                            <div class="input-group-addon">Compare Exchange Key</div>
-                            <input class="form-control"
-                                   name="documentId"
-                                   id="documentIdInput"
-                                       data-bind="textInput: key, disable: $root.isBusy">
-                            </div>
-                        </div>
-                        <div data-bind="if: !isCreatingNewValue()">
-                            <span class="obj-name" data-bind="text: key"></span>
-                        </div>
-                    </div>
+<form class="cmp-xchg flex-form" data-bind="submit: saveCompareExchangeItem" autocomplete="off">
+    <div class="flex-window flex-grow content-margin">
+        <div class="margin-top">
+            <div class="pull-left-sm btn-group">
+                <button type="submit" class="btn btn-primary" data-bind="enable: isSaveEnabled, css: { 'btn-spinner': spinners.save }">
+                    <i class="icon-save"></i><span>Save</span>
+                </button>
+                <a class="btn btn-default" data-bind="attr: { href: cmpXchUrl }">
+                    <i class="icon-cancel"></i><span>Cancel</span>
+                </a>
+                <button class="btn btn-default" data-bind="click: cloneCmpXch, visible: !isCreatingNewItem()">
+                    <i class="icon-clone"></i><span>Clone</span>
+                </button>
+                <button class="btn btn-danger" data-bind="click: deleteItem, enable: !isCreatingNewItem() && !spinners.delete(), css: { 'btn-spinner': spinners.delete }" >
+                    <i class="icon-trash"></i><span>Delete</span>
+                </button>
+            </div>
+            <div class="pull-right-sm bg-warning padding padding-xs" data-bind="visible: displayExternalChange">
+                <small>
+                    <i class="icon-warning"></i>
+                    <span>Value has been modified outside of the studio. <a href="#" data-bind="click: refresh">Click here to refresh.</a></span>
+                </small>
+            </div>
+        </div>
+        <div class="row margin-top margin-top-lg">
+            <div class="col-sm-offset-1 col-sm-1 no-padding-right margin-top">
+                <h2>Key</h2>
+            </div>
+            <div class="col-sm-10 margin-top">
+                <div data-bind="if: !isCreatingNewItem()">
+                    <h2 data-bind="text: key, attr: { title: key }"></h2>
                 </div>
-                <div class="col-md-6">
-                    <p class="pull-right-md bg-warning padding padding-xs" data-bind="visible: displayExternalChange()">
-                        <small>
-                            <span class="icon-warning"></span> Value has been modified outside of the studio. <a href="#" data-bind="click: refresh">Click here to refresh.</a>
-                        </small>
-                    </p>
+                <div data-bind="if: isCreatingNewItem, validationElement: key">
+                    <input class="form-control" data-bind="textInput: key, disable: $root.isBusy" placeholder="Enter Compare Exchange Key" />
                 </div>
             </div>
-            <div class="btn-bar toolbar">
-                <div class="pull-left-sm">
-                    <button type="submit" class="btn btn-primary save-btn" data-bind="enable: isSaveEnabled, css: { 'btn-spinner': isSaving }">
-                        <i class="icon-save"></i>
-                        <span>Save</span>
+        </div>
+        
+<!--    todo make one script ?-->
+        
+        <div class="row margin-top">
+            <div class="col-sm-offset-1 col-sm-1 no-padding-right">
+                <h2 class="margin-top">Value</h2>
+            </div>
+            <div class="col-sm-10" data-bind="with: newValueEditor">
+                <div class="btn-group btn-group-sm pull-right" role="group">
+                    <button class="btn btn-default" data-bind="enable: contentText, click: toClipboard" title="Copy value to clipboard">
+                        <i class="icon-copy-to-clipboard"></i><span>Copy</span>
                     </button>
-                    <button type="button" data-bind="click: deleteValue, enable: !isCreatingNewValue() && !spinners.delete(), css: { 'btn-spinner': spinners.delete }" class="delete-btn btn btn-danger">
-                        <i class="icon-trash"></i>
-                        <span>Delete</span>
+                    <button class="btn btn-default" data-bind="enable: contentText() && !isNewLineFriendlyMode(), click: formatContent">
+                        <i class="icon-indent"></i><span>Format</span>
+                    </button>
+                    <button class="btn btn-default" data-bind="enable: contentText, click: toggleCollapseContent">
+                        <i data-bind="attr: { class: isContentCollapsed() ? 'icon-unfold' : 'icon-fold'}"></i>
+                        <span data-bind="text: isContentCollapsed() ? 'Expand' : 'Collapse'"></span>
+                    </button>
+                    <button class="btn btn-default" data-toggle="button" data-bind="enable: contentText, click: toggleNewlineMode">
+                        <i class="icon-newline"></i><span>Toggle new lines</span>
                     </button>
                 </div>
-                <div class="pull-right-sm">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default" data-bind="click: toClipboard">
-                            <i class="icon-copy-to-clipboard"></i>
-                            <span>Copy to the clipboard</span>
+                <div>
+                    <pre id="valueEditor" class="form-control value-editor"
+                         data-bind="aceEditor: { code: contentText, minHeight: 200, allowResize: true, getFocus: true, lang: 'ace/mode/raven_document' },
+                                    disable: $root.isBusy, validationOptions: { errorsAsTitle: false }, validationElement: contentText">
+                    </pre>
+                </div>
+                <div data-bind="validationOptions: { errorsAsTitle: false }, validationElement: contentText">
+                    <div class="help-block" data-bind="validationMessage: contentText"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row margin-top margin-top-lg">
+            <div class="col-sm-offset-1 col-sm-1 no-padding-right">
+                <h2 class="margin-top">Metadata</h2>
+            </div>
+            <div class="col-sm-10">
+                <div data-bind="visible: !hasMetadata()">
+                    <div class="margin-top margin-top-sm">
+                        <button class="btn btn-info margin-top margin-top-xs" data-bind="click: addMetadata">
+                            <i class="icon-plus"></i><span>Add Metadata</span>
                         </button>
                     </div>
                 </div>
-            </div>
-            <div class="clearfix">
-                <div class="btn-group btn-group-sm pull-right" role="group">
-                    <button type="button" class="btn btn-default" data-bind="enable: !isNewLineFriendlyMode(), click: formatValue"><span class="icon-indent"></span> <span>Format</span></button>
-                    <button type="button" class="btn btn-default" data-toggle="button" data-bind="click: toggleAutoCollapse"><span class="icon-collapse"></span> <span>Toggle collapse</span></button>
-                    <button type="button" class="btn btn-default" data-toggle="button" data-bind="click: toggleNewlineMode"><span class="icon-newline"></span> <span>Toggle new lines</span></button>
+                <div data-bind="with: newMetadataEditor, visible: hasMetadata">
+                    <div class="btn-group btn-group-sm pull-right" role="group">
+                        <button class="btn btn-default" data-bind="enable: contentText, click: toClipboard" title="Copy metadata to clipboard">
+                            <i class="icon-copy-to-clipboard"></i><span>Copy</span>
+                        </button>
+                        <button class="btn btn-default" data-bind="enable: contentText() && !isNewLineFriendlyMode(), click: formatContent">
+                            <i class="icon-indent"></i><span>Format</span>
+                        </button>
+                        <button class="btn btn-default" data-bind="enable: contentText, click: toggleCollapseContent">
+                            <i data-bind="attr: { class: isContentCollapsed() ? 'icon-unfold' : 'icon-fold'}"></i>
+                            <span data-bind="text: isContentCollapsed() ? 'Expand' : 'Collapse'"></span>
+                        </button>
+                        <button class="btn btn-default" data-toggle="button" data-bind="enable: contentText, click: toggleNewlineMode">
+                            <i class="icon-newline"></i><span>Toggle new lines</span>
+                        </button>
+                        <button class="btn btn-danger" data-bind="click: $root.removeMetadata" title="Remove the metadata from the compare exchange item">
+                            <i class="icon-trash"></i><span>Delete</span>
+                        </button>
+                    </div>
+                    <div>
+                        <pre id="metadataEditor" class="form-control value-editor"
+                             data-bind="aceEditor: { code: contentText, minHeight: 200, allowResize: true, lang: 'ace/mode/raven_document' },
+                                        disable: $root.isBusy, validationOptions: { errorsAsTitle: false }, validationElement: contentText">
+                        </pre>
+                    </div>
+                    <div data-bind="validationOptions: { errorsAsTitle: false }, validationElement: contentText">
+                        <div class="help-block" data-bind="validationMessage: contentText"></div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="flex-window-scroll">
-            <pre id="docEditor" class="form-control value-editor absolute-fill" 
-                 data-bind="aceEditor: { code: valueText, fontSize:'16px', lang: 'ace/mode/raven_document' }, disable: isBusy, validationOptions: { errorsAsTitle: false }, validationElement: valueText"></pre>
-        </div>
-        <div data-bind="validationOptions: { errorsAsTitle: false }, validationElement: valueText">
-            <div class="help-block" data-bind="validationMessage: valueText"></div>
-        </div>
-
     </div>
 </form>
+
+
+
+
+
+<!--<form class="cmp-xchg flex-form" data-bind="submit: saveCompareExchangeItem" autocomplete="off">-->
+<!--    <div class="flex-window flex-grow content-margin">-->
+<!--        <div class="margin-top">-->
+<!--            <div class="pull-left-sm btn-group">-->
+<!--                <button type="submit" class="btn btn-primary" data-bind="enable: isSaveEnabled, css: { 'btn-spinner': spinners.save }">-->
+<!--                    <i class="icon-save"></i><span>Save</span>-->
+<!--                </button>-->
+<!--                <a class="btn btn-default" data-bind="attr: { href: cmpXchUrl }">-->
+<!--                    <i class="icon-cancel"></i><span>Cancel</span>-->
+<!--                </a>-->
+<!--                <button class="btn btn-default" data-bind="click: cloneCmpXch, visible: !isCreatingNewItem()">-->
+<!--                    <i class="icon-clone"></i><span>Clone</span>-->
+<!--                </button>-->
+<!--                <button class="btn btn-danger" data-bind="click: deleteItem, enable: !isCreatingNewItem() && !spinners.delete(), css: { 'btn-spinner': spinners.delete }" >-->
+<!--                    <i class="icon-trash"></i><span>Delete</span>-->
+<!--                </button>-->
+<!--            </div>-->
+<!--            <div class="pull-right-sm bg-warning padding padding-xs" data-bind="visible: displayExternalChange">-->
+<!--                <small>-->
+<!--                    <i class="icon-warning"></i>-->
+<!--                    <span>Value has been modified outside of the studio. <a href="#" data-bind="click: refresh">Click here to refresh.</a></span>-->
+<!--                </small>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="row margin-top margin-top-lg">-->
+<!--            <div class="col-sm-offset-1 col-sm-1 no-padding-right margin-top">-->
+<!--                <h2>Key</h2>-->
+<!--            </div>-->
+<!--            <div class="col-sm-10 margin-top">-->
+<!--                <div data-bind="if: !isCreatingNewItem()">-->
+<!--                    <span class="keyId" data-bind="text: key, attr: { title: key }"></span>-->
+<!--                </div>-->
+<!--                <div data-bind="if: isCreatingNewItem, validationElement: key">-->
+<!--                    <div class="input-group toolbar" >-->
+<!--                        <div class="input-group-addon">Compare Exchange Key</div>-->
+<!--                        <input class="form-control" data-bind="textInput: key, disable: $root.isBusy" placeholder="Enter key" />-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="row margin-top">-->
+<!--            <div class="col-sm-offset-1 col-sm-1 no-padding-right">-->
+<!--                <h2 class="margin-top">Value</h2>-->
+<!--            </div>-->
+<!--            <div class="col-sm-10">-->
+<!--                <div class="btn-group btn-group-sm pull-right" role="group">-->
+<!--                    <button class="btn btn-default" data-bind="enable: valueText, click: toClipboard" title="Copy value to clipboard">-->
+<!--                        <i class="icon-copy-to-clipboard"></i><span>Copy</span>-->
+<!--                    </button>-->
+<!--                    <button class="btn btn-default" data-bind="enable: !isNewLineFriendlyMode(), click: formatValue">-->
+<!--                        <i class="icon-indent"></i><span>Format</span>-->
+<!--                    </button>-->
+<!--                    <button class="btn btn-default" data-bind="click: toggleCollapseValue">-->
+<!--                        <i data-bind="attr: { class: isValueCollapsed() ? 'icon-unfold' : 'icon-fold'}"></i>-->
+<!--                        <span data-bind="text: isValueCollapsed() ? 'Expand' : 'Collapse'"></span>-->
+<!--                    </button>-->
+<!--                    <button class="btn btn-default" data-toggle="button" data-bind="click: toggleNewlineMode">-->
+<!--                        <i class="icon-newline"></i><span>Toggle new lines</span>-->
+<!--                    </button>-->
+<!--                </div>-->
+<!--                <div>-->
+<!--                    <pre id="valueEditor" class="form-control value-editor"-->
+<!--                         data-bind="aceEditor: { code: valueText, allowResize: true, getFocus: true, lang: 'ace/mode/raven_document' },-->
+<!--                                    disable: isBusy, validationOptions: { errorsAsTitle: false }, validationElement: valueText">-->
+<!--                    </pre>-->
+<!--                </div>-->
+<!--                <div data-bind="validationOptions: { errorsAsTitle: false }, validationElement: valueText">-->
+<!--                    <div class="help-block" data-bind="validationMessage: valueText"></div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="row margin-top margin-top-lg">-->
+<!--            <div class="col-sm-offset-1 col-sm-1 no-padding-right">-->
+<!--                <h2 class="margin-top">Metadata</h2>-->
+<!--            </div>-->
+<!--            <div class="col-sm-10">-->
+<!--                <div data-bind="visible: !hasMetadata()">-->
+<!--                    <div class="margin-top margin-top-sm">-->
+<!--                        <button class="btn btn-info" data-bind="click: addMetadata">-->
+<!--                            <i class="icon-plus"></i><span>Add Metadata</span>-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div data-bind="visible: hasMetadata">-->
+<!--                    <div class="btn-group btn-group-sm pull-right" role="group">-->
+<!--                        <button class="btn btn-default" data-bind="enable: metadataText, click: toClipboard" title="Copy metadata to clipboard">-->
+<!--                            <i class="icon-copy-to-clipboard"></i><span>Copy</span>-->
+<!--                        </button>-->
+<!--                        <button class="btn btn-default" data-bind="enable: !isNewLineFriendlyMode(), click: formatMetadata">-->
+<!--                            <i class="icon-indent"></i><span>Format</span>-->
+<!--                        </button>-->
+<!--                        <button class="btn btn-default" data-bind="click: toggleCollapseMetadata">-->
+<!--                            <i data-bind="attr: { class: isMetadataCollapsed() ? 'icon-unfold' : 'icon-fold'}"></i>-->
+<!--                            <span data-bind="text: isMetadataCollapsed() ? 'Expand' : 'Collapse'"></span>-->
+<!--                        </button>-->
+<!--                        <button class="btn btn-default" data-toggle="button" data-bind="click: toggleNewlineMode">-->
+<!--                            <i class="icon-newline"></i><span>Toggle new lines</span>-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                    <div>-->
+<!--                        <pre id="metadataEditor" class="form-control value-editor"-->
+<!--                             data-bind="aceEditor: { code: metadataText, allowResize: true, lang: 'ace/mode/raven_document' },-->
+<!--                                        disable: isBusy, validationOptions: { errorsAsTitle: false }, validationElement: metadataText">-->
+<!--                        </pre>-->
+<!--                    </div>-->
+<!--                    <div data-bind="validationOptions: { errorsAsTitle: false }, validationElement: metadataText">-->
+<!--                        <div class="help-block" data-bind="validationMessage: metadataText"></div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</form>-->
