--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/editIndex.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/editIndex.html
@@ -45,7 +45,10 @@
                         -->
                         <div class="margin-bottom">
                             <pre class="form-control map"
-                                 data-bind="aceEditor: { code: map, allowResize: true, getFocus: true, lang: 'ace/mode/ravenMapLinq', typeName: 'map', completer: $root.indexAutoCompleter.indexMapCompleter }, validationOptions: { errorsAsTitle: false }, validationElement: map"></pre>
+                                 data-bind="aceEditor: { code: map, allowResize: true, getFocus: true, lang: 'ace/mode/ravenMapLinq', 
+                                            typeName: 'map', completer: $root.indexAutoCompleter.indexMapCompleter }, 
+                                            validationOptions: { errorsAsTitle: false }, validationElement: map">
+                            </pre>
     
                             <div data-bind="validationElement: map">
                                 <div class="help-block" data-bind="validationMessage: map"></div>
