--- a/src/Raven.Studio/wwwroot/Content/css/pages/cmp-xchg.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/cmp-xchg.less
@@ -5,48 +5,13 @@
     .value-editor {
         flex-grow: 1;
     }
+}
 
-    .documentId {
-        font-size: 25px;
-        margin-bottom: 8px;
-
-        @obj-name-placeholder-color: darken(@gray,10%);
-
-        input.obj-name {
-            display: block;
-            width: 100%;
-            line-height: @line-height-computed;
-            background-color: transparent;
-            padding: 4px;
-            border: 1px solid @input-border;
-
-            &::-webkit-input-placeholder {
-                color: @obj-name-placeholder-color;
-            }
-
-            &:-moz-placeholder {
-                color: @obj-name-placeholder-color;
-            }
-
-            &::-moz-placeholder {
-                color: @obj-name-placeholder-color;
-            }
-
-            &:-ms-input-placeholder {
-                color: @obj-name-placeholder-color;
-            }
-
-            &::placeholder {
-                color: @obj-name-placeholder-color;
-            }
+.cmp-xchg-warnings {
+    table {
+        .description {
+            white-space:pre-line;
         }
-
-        .span.obj-name {
-            display: inline-block;
-            padding: 3px;
-        }
-
     }
-
 }
 
