--- a/src/Raven.Studio/wwwroot/App/views/database/status/ongoingTasksStats.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/status/ongoingTasksStats.html
@@ -34,6 +34,7 @@
             <div class="extract" data-property="Extract"></div>
             <div class="transform" data-property="Transform"></div>
             <div class="load" data-property="Load"></div>
+            <div class="subscription" data-property="Subscription"></div>
         </div>
     </div>
     <div class="flex-vertical absolute-fill">
