--- a/src/Raven.Studio/wwwroot/Content/css/pages/metrics.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/metrics.less
@@ -139,6 +139,9 @@ rect.pane {
             .load {
                 color: @color-2-2;
             }
+            .subscription {
+                color: @color-5;
+            }
         }
     }   
 }
