--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/createOngoingTask.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/createOngoingTask.html
@@ -42,6 +42,12 @@
                             <i class="icon-sql-etl"></i><br />SQL ETL
                         </a>
                     </div>
+                    <!-- todo... olap-icon...-->
+                    <div class="col-sm-4 margin-bottom" title="Create new OLAP ETL task">
+                        <a href="#" class="olap-etl" data-bind="click: newOlapEtlTask">
+                            <i class="icon-sql-etl"></i><br />OLAP ETL
+                        </a>
+                    </div>
                 </div>
                 <div class="hr-title">
                     <h5>Backups & subscriptions</h5>
