--- a/src/Raven.Studio/wwwroot/Content/css/pages/database-group-graph.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/database-group-graph.less
@@ -145,9 +145,13 @@
         &.RavenEtl {
             fill: @ravendb-etl-color;
         }
-
+        
         &.SqlEtl {
             fill: @sql-etl-color;
+        }
+
+        &.OlapEtl {
+            fill: @olap-etl-color;
         }
 
         &.Subscription {
