--- a/src/Raven.Studio/wwwroot/Content/css/pages/ongoing-tasks.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/ongoing-tasks.less
@@ -122,6 +122,11 @@
         color: @sql-etl-color;
     }
 
+    &.olap-etl {
+        color: @olap-etl-color;
+    }
+
+
     &.subscription {
         color: @subscription-color;
     }
