--- a/src/Raven.Studio/wwwroot/App/views/database/settings/connectionStringOlap.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/settings/connectionStringOlap.html
@@ -1,3 +1,12 @@
+<!--<div class="form-group" data-bind="validationElement: connectionStringName">-->
+<!--    <label class="control-label">Name</label>-->
+<!--    <div class="flex-grow">-->
+<!--        <input class="form-control" placeholder="Enter a name for the connection string"-->
+<!--               data-bind="textInput: connectionStringName, enable: isNew, attr: { 'title': isNew() ? 'Enter any name of your choice for this connection string' : '' }" />-->
+<!--    </div>-->
+<!--</div>-->
+
+
 <div class="form-group" data-bind="validationElement: connectionStringName">
     <label class="control-label">Name</label>
     <div class="flex-grow">
@@ -5,6 +14,7 @@
                data-bind="textInput: connectionStringName, enable: isNew, attr: { 'title': isNew() ? 'Enter any name of your choice for this connection string' : '' }" />
     </div>
 </div>
+
 <div class="margin-top margin-top-lg"><h3>Destinations</h3></div>
 <div data-bind="with: localSettings" class="margin-top margin-top-lg">
     <div class="toggle margin-left">
